--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -5,7 +5,7 @@
 //$header-padding-top: 1.5em;
 //$header-padding-bottom: 1.5em;
 
-//$max-width: 1350px;
+$max-width: 660px;
 //$indented-lists: true;
 
 // Padding used for layout margins
@@ -15,7 +15,7 @@
 //$pad-wide: 55px;
 
 // Sidebar widths used in media queries
-//$sidebar-width-medium: 240px;
-//$sidebar-pad-medium: 15px;
-//$sidebar-pad-wide: 20px;
-//$sidebar-width-wide: 300px;
+$sidebar-width-medium: 0px;
+$sidebar-pad-medium: 0px;
+$sidebar-pad-wide: 0px;
+$sidebar-width-wide: 0px;
