--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -44,6 +44,7 @@ $header-padding-bottom: 1.5em !default;
 }
 
 body {
+  box-shadow: 0px 0px 115px -60px black;
   -webkit-text-size-adjust: none;
   max-width: $max-width;
   position: relative;
