--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -32,11 +32,11 @@ layout: default
 {% endif %}
 </div>
 {% unless page.sidebar == false %}
-<aside class="sidebar">
+<!-- <aside class="sidebar">
   {% if site.page_asides.size %}
     {% include_array page_asides %}
   {% else %}
     {% include_array default_asides %}
   {% endif %}
-</aside>
+</aside> -->
 {% endunless %}
