--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,5 @@
 <ul class="main-navigation">
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-  <li><a href="http://rememberlenny.com">Portfolio</a></li>
-  <li><a href="mailto://lkbgift@gmail.com">Contact</a></li>
+  <li><a href="http://www.rememberlenny.com">Portfolio</a></li>
+  <li><a href="mailto:lkbgift@gmail.com">Contact</a></li>
 </ul>
