--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -11,18 +11,18 @@
 
   <section class="top-bar-section">
     <!-- Left Nav Section -->
-    
+
     <!-- Right Nav Section -->
     <ul class="right">
       <li class="divider"></li>
       {% if site.subscribe_email %}
-        <li><a href="{{ site.subscribe_email }}" rel="subscribe-email" title="subscribe via email">Email</a></li>
+        <li><a href="#subscribe" rel="subscribe-email" title="subscribe via email">Email</a></li>
       {% endif %}
-      <li class="divider"></li>   
+      <li class="divider"></li>
       <li class="">
         <a href="/press">Press</a>
       </li>
-      <li class="divider"></li>      
+      <li class="divider"></li>
       <li class=""><a href="http://blog.rememberlenny.com">Blog</a></li>
       <li class="divider"></li>
       <li class="">
