--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -12,7 +12,7 @@
     {% include after_footer.html %}
   </div>
 
-<hr>
+<hr id="subscribe">
 
    <strong><h2>PS. Get new essays sent to your inbox</h2></strong>
     <!-- Begin MailChimp Signup Form -->
