Saving the commit

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -11,6 +11,7 @@
     <footer role="contentinfo">{% include footer.html %}</footer>
     {% include after_footer.html %}
   </div>
+<div class="row">
 
 <hr id="subscribe">
 
@@ -31,5 +32,6 @@
   <p class="text-center">
     <a href="http://blog.rememberlenny.com">Read more essays.</a>
   </p>
+</div>
 </body>
 </html>
