Saving the update

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -12,6 +12,7 @@
     {% include after_footer.html %}
   </div>
 <div class="row">
+<div class="column">
 
 <hr id="subscribe">
 
@@ -32,6 +33,7 @@
   <p class="text-center">
     <a href="http://blog.rememberlenny.com">Read more essays.</a>
   </p>
+</div>
 </div>
 </body>
 </html>
