--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -24,4 +24,19 @@
   <script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
   {% include custom/head.html %}
   {% include google_analytics.html %}
+   <!--
+  <PageMap>
+     <DataObject type="document">
+        <Attribute name="title">{{page.title}}</Attribute>
+        <Attribute name="author">{{ site.author }}</Attribute>
+        <Attribute name="description">{{ description | strip_html | condense_spaces | truncate:150 }}</Attribute>
+        <Attribute name="rating">5</Attribute>
+     </DataObject>
+     <DataObject type="thumbnail">
+        <Attribute name="src" value="https://lh4.googleusercontent.com/-pLbrRAXUYyU/UhPBF5_0WbI/AAAAAAAAANw/JmPHNSi7nak/s517-no/lenny--2.jpg" />
+        <Attribute name="width" value="200" />
+        <Attribute name="height" value="200" />
+     </DataObject>
+  </PageMap>
+  -->
 </head>
